# vcpkdg_temp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  helloworld.cpp
